--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "react-use": "^17.2.4"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "5.0.1",
+    "@semantic-release/git": "9.0.0",
+    "@semantic-release/npm": "7.1.3",
     "@types/react": "17.0.19",
     "@types/react-dom": "17.0.9",
     "@vitejs/plugin-react-refresh": "1.3.6",
+    "conventional-changelog-conventionalcommits": "4.6.0",
     "typescript": "4.4.2",
     "vite": "2.5.1",
     "vite-plugin-windicss": "1.3.0",
