--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "@logseq/libs": "^0.0.1-alpha.26",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-use": "^17.2.4"
@@ -20,8 +21,12 @@
     "@semantic-release/npm": "7.1.3",
     "@types/react": "17.0.19",
     "@types/react-dom": "17.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
     "@vitejs/plugin-react-refresh": "1.3.6",
     "conventional-changelog-conventionalcommits": "4.6.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.24.0",
     "typescript": "4.4.2",
     "vite": "2.5.1",
     "vite-plugin-windicss": "1.3.0",
