--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
   "license": "MIT",
   "dependencies": {
     "@logseq/libs": "^0.0.1-alpha.26",
-    "@use-gesture/react": "^10.0.0-beta.22",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "keyboardjs": "^2.6.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-spring": "^9.2.4",
     "react-use": "^17.2.4"
   },
   "devDependencies": {
