--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,8 @@ jobs:
           version: 6.0.2
       - run: pnpm install
       - run: pnpm build
-      - uses: montudor/action-zip@v1
-        with:
-          args: zip -qq -r logseq-plugin-tabs.zip dist readme.md LICENSE package.json
+      - name: Install zip
+        uses: montudor/action-zip@v1
       - name: Release
         run: npx semantic-release
         env:
