--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@semantic-release/changelog": "5.0.1",
+    "@semantic-release/exec": "^5.0.0",
     "@semantic-release/git": "9.0.0",
     "@semantic-release/npm": "7.1.3",
     "@types/react": "17.0.19",
