--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@logseq/libs": "^0.0.1-alpha.26",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "fast-deep-equal": "^3.1.3",
     "immer": "^9.0.5",
     "keyboardjs": "^2.6.4",
     "react": "^17.0.2",
