--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "license": "MIT",
   "dependencies": {
     "@logseq/libs": "^0.0.1-alpha.29",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "fast-deep-equal": "^3.1.3",
     "immer": "^9.0.6",
     "keyboardjs": "^2.6.4",
@@ -27,10 +26,12 @@
     "@types/react-dom": "17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
-    "@vitejs/plugin-react-refresh": "1.3.6",
+    "@vitejs/plugin-react": "^1.0.1",
     "conventional-changelog-conventionalcommits": "4.6.0",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.26.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "semantic-release": "^18.0.0",
     "typescript": "4.4.2",
     "vite": "2.5.1",
     "vite-plugin-windicss": "1.3.0",
