--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@logseq/libs": "^0.0.1-alpha.35",
     "fast-deep-equal": "^3.1.3",
     "immer": "^9.0.12",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-use": "^17.3.2"
   },
   "devDependencies": {
@@ -22,18 +22,19 @@
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "10.0.1",
     "@semantic-release/npm": "9.0.1",
-    "@types/react": "17.0.40",
-    "@types/react-dom": "17.0.13",
-    "@typescript-eslint/eslint-plugin": "^5.14.0",
-    "@typescript-eslint/parser": "^5.14.0",
-    "@vitejs/plugin-react": "^1.2.0",
+    "@types/react": "17.0.43",
+    "@types/react-dom": "17.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
+    "@vitejs/plugin-react": "^1.3.0",
     "conventional-changelog-conventionalcommits": "4.6.3",
-    "eslint": "^8.10.0",
-    "eslint-plugin-react": "^7.29.3",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint": "^8.12.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
     "semantic-release": "^19.0.2",
-    "typescript": "4.6.2",
-    "vite": "2.8.6",
+    "typescript": "4.6.3",
+    "vite": "2.9.1",
+    "vite-plugin-logseq": "^1.1.1",
     "vite-plugin-windicss": "1.8.3",
     "windicss": "3.5.1"
   },
