--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@logseq/libs": "^0.0.1-alpha.35",
+    "@logseq/libs": "^0.0.3",
     "fast-deep-equal": "^3.1.3",
     "immer": "^9.0.12",
     "react": "^18.0.0",
@@ -22,20 +22,20 @@
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "10.0.1",
     "@semantic-release/npm": "9.0.1",
-    "@types/react": "17.0.43",
-    "@types/react-dom": "17.0.14",
-    "@typescript-eslint/eslint-plugin": "^5.18.0",
-    "@typescript-eslint/parser": "^5.18.0",
-    "@vitejs/plugin-react": "^1.3.0",
+    "@types/react": "18.0.6",
+    "@types/react-dom": "18.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "@vitejs/plugin-react": "^1.3.1",
     "conventional-changelog-conventionalcommits": "4.6.3",
-    "eslint": "^8.12.0",
+    "eslint": "^8.14.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "semantic-release": "^19.0.2",
     "typescript": "4.6.3",
-    "vite": "2.9.1",
-    "vite-plugin-logseq": "^1.1.1",
-    "vite-plugin-windicss": "1.8.3",
+    "vite": "2.9.5",
+    "vite-plugin-logseq": "^1.1.2",
+    "vite-plugin-windicss": "1.8.4",
     "windicss": "3.5.1"
   },
   "logseq": {
